# ex_type_traits

./: CMakeLists.txt  LICENSE.txt
include/ex_type_traits/: detectors.h  func_traits.h  op_traits.h
src/: detectors.h  func_traits.h  std_container_traits.h
tests/: CMakeLists.txt  main.cpp  test_op_traits.cpp  test_op_traits.h  tests.cpp  tests.h
